# RedTeamOps

./: Cargo.toml  LICENSE  README.md
apc-injection/: Cargo.toml
apc-injection/src/: lib.rs
callback-injection/: Cargo.toml
callback-injection/src/: lib.rs
create-thread-injection/: Cargo.toml
create-thread-injection/src/: lib.rs  local.rs  remote.rs
earlycascade-injection/: Cargo.toml
earlycascade-injection/src/: lib.rs
layered-syscall/: Cargo.toml
layered-syscall/src/: hook.rs
ntapi/src/: lib.rs  ntexapi.rs  ntheader.rs  ntldr.rs  ntpsapi.rs  ntrtl.rs
ntapi/src/winapi_local/um/: winnt.rs
shared/: Cargo.toml
shared/src/: lib.rs  ntpeb.rs  utils.rs
syscall/: Cargo.toml
syscall/src/: gate.rs
