[package]
name = "callback-injection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "callback-injection"
path = "bin/callback.rs"

[dependencies]
shared = { workspace = true }

anyhow = { workspace = true }
ntapi = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_System_Kernel", 
    "Win32_Foundation", "Win32_System_Threading", "Win32_Security",
    "Win32_System_Memory", "Win32_System_Rpc", "Win32_Globalization", 
    "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug", "Win32_Graphics_Gdi",
    "Win32_System_SystemServices"
] }